# dj_engine

./: .gitignore  AGENTS.md  ANIMATION_SYSTEM_AUDIT.md  Cargo.toml  DOCUMENTATION_AUDIT.md  GEMINI.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  STORY_GRAPH_AUDIT.md  TECHNICAL_BRIEFING.md  clippy_output.txt  complete-detailed-docs.md  dj  docs-summary-reference.md
--editor/: project.json
.github/: PULL_REQUEST_TEMPLATE.md
archive/: AI_SUMMARY.md  ANIMATION_GUIDE.md  ARCHITECTURE.md  ASSET_PIPELINE.md  CHANGELOG.md  CODING_STANDARDS.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_SUMMARY.md  LUA_FFI.md  PROJECT_PLAN.md  QUICKSTART.md  README (2).md  README (3).md  README.md  SPRITE_ARCHITECTURE.md  SPRITE_QUICKSTART.md  SPRITE_SYSTEM_V2.md  WORKFLOW.md  dj-sprite-system-plan.md  hamster_milestone.md
archive/games/new_horizon/: Cargo.toml  project.json
archive/games/new_horizon/scenes/: intro_scene.json
archive/games/new_horizon/src/: main.rs
archive/games/new_horizon/story_graphs/: intro.json
docs/: AI_Coding_Assistant_Config.md  ARCHITECTURE.md  Architecture_Specification.json  CODE_STYLE.md  CONTROLS.md  DELIVERABLES_Summary.md  DETAILED_TASK_DOCS.md  LOGGING.md  (+18 more)
engine/: Cargo.toml
engine/examples/: database.json  jrpg_scene.json  story_graph.json  td_scene.json
engine/src/: lib.rs  main.rs  probe.rs  types.rs
engine/src/animation/: components.rs  events.rs  mod.rs  systems.rs
engine/src/assets/: definitions.rs  mod.rs
engine/src/audio/: mod.rs
engine/src/combat/: mod.rs
engine/src/core/: logging.rs  mod.rs  phases.rs
engine/src/data/: assets.rs  campaign.rs  components.rs  database.rs  loader.rs  map.rs  mod.rs  mode.rs  project.rs  save.rs  scenario.rs  scene.rs  spawner.rs  story.rs
engine/src/diagnostics/: console.rs  inspector.rs  mod.rs
engine/src/editor/: campaign.rs  mod.rs  state.rs  systems.rs  validation.rs
engine/src/editor/ui/: campaign.rs  feature_grid.rs  mod.rs  panels.rs  phases_view.rs  timeline.rs  views.rs  workspace.rs
engine/src/game/: mod.rs
engine/src/input/: mod.rs
engine/src/lua_scripting/: context.rs  ffi.rs  mod.rs  tests.rs
engine/src/midi/: mod.rs
engine/src/navigation/: mod.rs
engine/src/physics/: mod.rs
engine/src/rendering/: camera.rs  mod.rs
engine/src/scene/: mod.rs
engine/src/scripting/: context.rs  ffi.rs  mod.rs  tests.rs
engine/src/story_graph/: events.rs  executor.rs  mod.rs  types.rs
engine/src/ui/: mod.rs
engine/tests/: animation_lua.rs  animation_tests.rs  campaign_tests.rs  editor_integrity.rs  headless_tests.rs  input_refinement.rs  integration_tests.rs  story_execution.rs  story_refinement.rs
prototypes/2d_renderer/: .gitattributes  .gitignore  2d_rendering_prompt.md  BEVY_0_18_UPGRADE_STATUS.md  BEVY_VERSION_ANSWER.md  BEVY_VERSION_DECISION.md  BEVY_VERSION_INFO.md  COMMIT_VERIFICATION.md  CONSOLE_FIX.md  CONSOLE_SUMMARY.md  Cargo.toml  DEBUG_CONSOLE.md  FINAL_SUMMARY.md  GIT_COMMIT_GUIDE.md  PRISTINE_VERIFICATION.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  PROJECT_TESTING_SUMMARY.md  QUICKSTART.md  README.md  TESTING.md  TESTING_QUICKREF.md  VERIFICATION_REPORT.md  check.sh  demo.sh  git-helper.sh  git-status.sh  test.sh
prototypes/2d_renderer/.github/workflows/: ci.yml
prototypes/2d_renderer/assets/: README.md
prototypes/2d_renderer/src/: components.rs  lib.rs  main.rs  resources.rs  state.rs  systems.rs
prototypes/2d_renderer/src/ui/: hud.rs
prototypes/2d_renderer/tests/: systems_test.rs
prototypes/3d_renderer/: 3d_constellation_prompt.md  3d_rendering_prompt.md  Cargo.toml  DEBUGGING_BLACK_SCREEN.md  FINAL_TEST_RUN.md  GIT_COMMIT_MESSAGE.txt  GIT_COMPLETE.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  TESTING.md  TESTING_COMPLETE.md  TESTING_SUMMARY.md  TEST_FINAL_STATUS.md  TEST_RESULTS_SUMMARY.txt  TEST_STATUS_NOW.md  TEST_VERIFICATION_REPORT.md  TRUTH.txt  build_mesa_dozen.sh  build_mesa_dozen_fixed.sh  build_mesa_dozen_no_sudo.sh  build_mesa_final.sh  build_mesa_simple.sh  capture_gltf_only.sh  run_capture_simple.sh  run_debug.sh  run_debug_text.sh  run_diagnostic.sh  run_export.sh  run_gpu.sh  run_gpu_accelerated.sh  run_visible_gltf.sh  run_visual_test.sh  status.md  test.sh  test_runner.sh  troubleshoot_render.sh  verify.sh  verify_tests.sh
prototypes/3d_renderer/assets/: test_models
prototypes/3d_renderer/src/: capture_plugin.rs  debug_plugin.rs  diagnostic_plugin.rs  export_config.rs  gltf_capture.rs  lib.rs  main.rs  main_capture.rs  main_debug_text.rs  main_gltf_test.rs  main_original.rs  simple_main.rs  simple_main_fixed.rs  verify_gltf.rs
prototypes/3d_renderer/src/plugins/: camera.rs  lighting.rs  mod.rs  models.rs
prototypes/3d_renderer/tests/: camera_lighting_test.rs  gltf_loading_test.rs  gltf_loading_test_minimal.rs  integration_test.rs
(+92 files in other folders)
