[workspace]
resolver = "2"
members = [
    "engine",
    "tools/asset_generator"
]
default-members = ["engine"]

[workspace.dependencies]
bevy = { version = "0.15", features = ["dynamic_linking"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }
rand = "0.8"
bevy_egui = "0.31"
uuid = { version = "1.0", features = ["v4", "serde"] }
tempfile = "3.14"

# Profile for development - faster builds at the cost of runtime performance
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3 # Optimize dependencies even in dev mode
