[package]
name = "dj_engine"
version = "0.1.0"
edition = "2021"
default-run = "dj_engine"

[[bin]]
name = "dj_engine"
path = "src/main.rs"

[lib]
name = "dj_engine"
path = "src/lib.rs"

[dependencies]
bevy = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
mlua = { workspace = true }
midly = { version = "0.5", features = ["std"] }
rodio = "0.19"
bevy_egui = { workspace = true }
egui_dock = { version = "0.14", features = ["serde"] }
bevy-inspector-egui = "0.28"
chrono = "0.4"
uuid = { workspace = true }
dirs = "5.0"

[dev-dependencies]
tempfile = { workspace = true }


