[package]
name = "dj_engine"
version = "0.1.0"
edition = "2021"
default-run = "dj_engine"

[[bin]]
name = "dj_engine"
path = "src/main.rs"

[lib]
name = "dj_engine"
path = "src/lib.rs"

[dependencies]
bevy = { workspace = true }
anyhow = "1.0"
futures-lite = "2.3"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
mlua = { workspace = true }
midly = { version = "0.5", features = ["std"] }
rodio = "0.19"
bevy_egui = { workspace = true }
egui_dock = { version = "0.18", features = ["serde"] }
bevy-inspector-egui = "0.36"
chrono = "0.4"
uuid = { workspace = true }
toml = "0.8"
dirs = "5.0"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
tracing = "0.1.44"

[dev-dependencies]
tempfile = { workspace = true }


