[package]
name = "bevy-2d-renderer"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
name = "bevy_2d_renderer"
path = "src/lib.rs"

[[bin]]
name = "bevy-2d-renderer"
path = "src/main.rs"

[dependencies]
bevy = "0.18"
bevy_ecs_tilemap = "0.18"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
bevy = "0.18"
bevy_ecs_tilemap = "0.18"
