[package]
name = "new_horizon"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true, features = ["dynamic_linking"] }
mlua = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
rand = { workspace = true }
thiserror = { workspace = true }
dj_engine = { path = "../../../engine" }
